--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.20.1",
     "framer-motion": "^10.16.16",
     "react-hook-form": "^7.48.2",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
